[package]
name = "russimp-sys"
version = "2.0.3"
edition = "2024"

[lib]
name = "russimp_sys"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "package"
path = "bin/package/main.rs"

[features]
default = []
build-assimp = []
prebuilt = []
nozlib = []
static-link = ["build-assimp"]

[dependencies]
flate2 = "1.0.25"
tar = "0.4.38"

[build-dependencies]
bindgen = "0.72.0"
built = "0.8.0"
cmake = "0.1.49"
flate2 = "1.0.25"
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
tar = "0.4.38"
which = "8.0.0"
